--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (http://www.futurealoof.com)",
-  "name": "tunnel-agent",
+  "name": "@hubdoc/tunnel-agent",
   "description": "HTTP proxy tunneling agent. Formerly part of mikeal/request, now a standalone module.",
   "version": "0.3.0",
   "repository": {
