--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {},
   "devDependencies": {},
   "optionalDependencies": {},
+  "private": true,
   "engines": {
     "node": "*"
   }
