--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "HTTP proxy tunneling agent. Formerly part of mikeal/request, now a standalone module.",
   "version": "0.3.0",
   "repository": {
-    "url": "https://github.com/mikeal/tunnel-agent"
+    "url": "https://github.com/hubdoc/tunnel-agent"
   },
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {},
   "optionalDependencies": {},
-  "private": true,
   "engines": {
     "node": "*"
   }
